--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2591,13 +2591,19 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background-color: #1f1815;
 		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+		background-image: linear-gradient(
+			rgba(0, 0, 0, 0.0) 0%,
+			rgba(0, 0, 0, 0.0) 50%,
+			rgba(0, 0, 0, 0.2) 60%,
+			rgba(0, 0, 0, 0.7) 70%,
+			rgba(0, 0, 0, 0.9) 85%,
+			rgba(0, 0, 0, 1.0) 95%
+		  ),
+		url("../../images/bg.jpg");
 		background-position: top left,							top left;
-		background-repeat: repeat,								no-repeat;
-		background-size: auto,								150%;
-		color: rgba(255, 255, 255, 0.5);
+		background-repeat: no-repeat;
+		background-size: cover;
 		height: 100%;
 		left: 0;
 		padding: 8em 4em;
