--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2590,6 +2590,7 @@ input, select, textarea {
 		-moz-justify-content: space-between;
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
+		background-color: black;
 		justify-content: space-between;
 		background-attachment: scroll,								scroll;
 		background-image: linear-gradient(
@@ -3084,7 +3085,7 @@ input, select, textarea {
 			#footer {
 				background-attachment: scroll;
 				background-color: #1f1815;
-				background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+				background-image: url("images/overlay.png"), url("../../images/bg1.jpg");
 				background-position: top left,						bottom center;
 				background-repeat: repeat,							no-repeat;
 				background-size: auto,							cover;
@@ -3163,7 +3164,8 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				padding: 2.25em 1.5em;
+				background-image: url("../../images/bg4.jpg");
+				background-size: cover;
 			}
 
 				#header h1 {
@@ -3207,7 +3209,9 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				padding: 4.5em 1.5em;
+				background-image: url("../../images/bg4.jpg");
+				background-size: 100px 10px;
+
 			}
 
 				#header h1 br {
