--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2596,6 +2596,15 @@ input, select, textarea {
 		background-position: top left,							top left;
 		background-repeat: no-repeat;
 		background-size: cover;
+		background-image: linear-gradient(
+			rgba(0, 0, 0, 0.0) 0%,
+			rgba(0, 0, 0, 0.0) 50%,
+			rgba(0, 0, 0, 0.2) 60%,
+			rgba(0, 0, 0, 0.7) 70%,
+			rgba(0, 0, 0, 0.9) 85%,
+			rgba(0, 0, 0, 1.0) 95%
+		  ),
+		url("../../images/bg.webp");
 		height: 100%;
 		left: 0;
 		padding: 8em 4em;
