--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2610,6 +2610,7 @@ input, select, textarea {
 		padding: 8em 4em;
 		position: fixed;
 		text-align: right;
+		margin-bottom: -10px;
 		top: 0;
 		width: 35%;
 	}
