--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3007,6 +3007,10 @@ input, select, textarea {
 				url("../../images/bg.webp");
 			}
 
+			#name1{
+				margin-top: 50px;
+			}
+
 	}
 
 /* Large */
