--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3119,7 +3119,7 @@ input, select, textarea {
 			#footer {
 				background-attachment: scroll;
 				background-color: #1f1815;
-				background-image: url("images/overlay.png"), url("../../images/bg1.jpg");
+				background-image: url("images/overlay.png"), url("../../images/parham-2025.webp");
 				background-position: top left,						bottom center;
 				background-repeat: repeat,							no-repeat;
 				background-size: auto,							cover;
