--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2604,7 +2604,7 @@ input, select, textarea {
 			rgba(0, 0, 0, 0.9) 85%,
 			rgba(0, 0, 0, 1.0) 95%
 		  ),
-		url("../../images/bg.webp");
+		url("../../images/parham-2025.webp");
 		height: 100%;
 		left: 0;
 		padding: 8em 4em;
@@ -3004,7 +3004,7 @@ input, select, textarea {
 					rgba(0, 0, 0, 0.9) 85%,
 					rgba(0, 0, 0, 1.0) 95%
 				  ),
-				url("../../images/bg.webp");
+				url("../../images/parham-2025.webp");
 			}
 
 			#name1{
@@ -3030,7 +3030,7 @@ input, select, textarea {
 					rgba(0, 0, 0, 0.9) 85%,
 					rgba(0, 0, 0, 1.0) 95%
 				  ),
-				url("../../images/bg.webp");
+				url("../../images/parham-2025.webp");
 			}
 
 				#header h1 {
@@ -3103,7 +3103,7 @@ input, select, textarea {
 					rgba(0, 0, 0, 0.9) 85%,
 					rgba(0, 0, 0, 1.0) 95%
 				  ),
-				url("../../images/bg.webp");
+				url("../../images/parham-2025.webp");
 			}
 
 				#header h1 {
@@ -3210,7 +3210,7 @@ input, select, textarea {
 					rgba(0, 0, 0, 0.9) 85%,
 					rgba(0, 0, 0, 1.0) 95%
 				  ),
-				url("../../images/bg4.webp");
+				url("../../images/parham-2025.webp");
 				padding-top: 350px;
 
 			}
@@ -3267,7 +3267,7 @@ input, select, textarea {
 					rgba(0, 0, 0, 0.9) 85%,
 					rgba(0, 0, 0, 1.0) 95%
 				  ),
-				url("../../images/bg5.webp");
+				url("../../images/parham-2025.webp");
 				background-color: #efefef00;
 				padding-top: 0px;
 				margin-top: -10px;
