--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3267,7 +3267,7 @@ input, select, textarea {
 					rgba(0, 0, 0, 0.9) 85%,
 					rgba(0, 0, 0, 1.0) 95%
 				  ),
-				url("../../images/parham-2025.webp");
+				url("../../images/parham-2025-mobile.webp");
 				background-color: #efefef00;
 				padding-top: 0px;
 				margin-top: -10px;
