--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3250,12 +3250,47 @@ input, select, textarea {
 	}
 
 /* XSmall */
-
-	@media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) {
+  /* Header */
+  #header {
+    height: 100vh; /* Make header fill the entire viewport */
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: 
+      linear-gradient(
+        rgba(0, 0, 0, 0.0) 0%,
+        rgba(0, 0, 0, 0.0) 50%,
+        rgba(0, 0, 0, 0.2) 60%,
+        rgba(0, 0, 0, 0.7) 70%,
+        rgba(0, 0, 0, 0.9) 85%,
+        rgba(0, 0, 0, 1.0) 95%
+      ),
+      url("../../images/parham-2025-mobile.jpg");
+    background-color: transparent;
+    padding: 0;
+    margin: 0;
+  }
+  
+  #header h1 br {
+    display: none;
+  }
+  
+  /* Footer */
+  #footer .copyright li {
+    border-left-width: 0;
+    display: block;
+    line-height: 2.25em;
+    margin-left: 0;
+    padding-left: 0;
+  }
+}
+	/*@media screen and (max-width: 480px) {
 
 		/* Header */
 
-			#header {
+			/* #header {
 				background-position: center center;
   				background-attachment: fixed;
   				background-repeat: no-repeat; background-size: cover;
@@ -3280,7 +3315,7 @@ input, select, textarea {
 
 		/* Footer */
 
-			#footer .copyright li {
+			/*#footer .copyright li {
 				border-left-width: 0;
 				display: block;
 				line-height: 2.25em;
@@ -3288,4 +3323,4 @@ input, select, textarea {
 				padding-left: 0;
 			}
 
-	}
+	}*/
